# kinectcam

./: .gitignore  CMakeLists.txt  main.cpp
